# package-tutorial-sample

./: README.md  pyproject.toml
.github/workflows/: cicd.yml
src/example_package_this_is_my_test_package_u_42/: example.py  version.py
