[project]
name = "example_package_this_is_my_test_package_u_42"
version = "0.0.2"
dynamic = ["dependencies"]
authors = [
  { name="Lars Briem", email="lars.briem@platomo.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.version]
path = "src/example_package_this_is_my_test_package_u_42/version.py"